--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                       <li><span class="fa-solid fa-envelope-open-text"style="color:orange"></span><span class="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.0 Box 151-30403,Marigat</span></li>
                       <li><span class="icon icon-phone" style="color:orange"></></span><span class="text">TEL: +2547-22597332</span></li>
                       <li><a href="https://web.facebook.com/NetworkofIndig1"><span class="icon icon-facebook"style="color:orange"></></span><span class="text">Facebook</span></a></li>
-                      <li><a href="https://twitter.com/networkingofIndig1"><span class="icon icon-twitter"style="color:orange"></></span><span class="text"> Twitter</span></a></li>
+                      <li><a href="https://twitter.com/NetworkofIndig1?t=CM151Yrwpyet8Hjn4CXGtw&s=08"><span class="icon icon-twitter"style="color:orange"></></span><span class="text"> Twitter</span></a></li>
                       <li><span class="icon icon-envelope"style="color:orange"></></span><span class="text"> info@igwi.or.ke</span></li>
                       
                   </ul>
